added a background image to index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                             <h1>Be the First to <span style="color: rgb(0, 255, 213);">Connect</span></h1>
                             <h4>Join our Real Estate App Waitlist!</h4>
                             <p>Don't miss out on this opportunity to revolutionize your real estate experience.</p>
+                            <h4>Join our Real Estate App Waitlist!</h4>
+                            <p>Don't miss out on this opportunity to revolutionize your real estate experience.</p>
+                            <h4>Join our Real Estate App Waitlist!</h4>
+                            <p>Don't miss out on this opportunity to revolutionize your real estate experience.</p>
                         </div>
 
                     </div>
