--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <button type="submit" class="submit"> Let's redefine real estate together!</button>
                 <p class="fw-bold" >Connect With Us</p>
 
-                <p class="pt-5">Stay updated on our latest news, features, and announcements by following us on social media:</p>
+                <p class="pt-5">Stay updated on our latest <span class=text-danger>news</span>, features, and announcements by following us on social media:</p>
 
                 <div class="social-icons">
                     <a href="#"><i class="fa-brands fa-facebook-f fa-xl me-2" style="color:#000000;"></i></a>
