--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <div class="section-2">
             <div class="container p-5">
                 <h5 class="fw-bold mt-5">WHY JOIN THE WAITLIST?</h5>
+                <h5 class="fw-bold mt-5">WHY JOIN THE WAITLIST?</h5>
                 <p class="pt-3">Are you ready to unlock the doors to a new era in real estate? Here's why you should secure your spot on our waiting list today:</p>
                 <div class="row why g-5">
                     <div class="col-md pt-5">
